# cd1_agent

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.localstack.yml
dags/: bdp_cost_detection_dag.py  bdp_detection_dag.py  bdp_drift_detection_dag.py  bdp_hdsp_detection_dag.py
docs/: ARCHITECTURE.md  BDP_COMPACT.md  CONFIG_DRIFT_DETECTION.md  COST_ANOMALY_DETECTION.md  COST_OPTIMIZATION.md  EMR_BATCH_AGENT.md  HDSP_DETECTION.md  IMPLEMENTATION_GUIDE.md  INTERACTIVE_CHAT.md  PROMPTS.md
docs/bdp_agents/: handler_flow.md
docs/bdp_compact_agent/: README.md  architecture.md  testing.md
docs/cost_agents/: handler_flow.md
docs/drift_agents/: handler_flow.md
docs/hdsp_agents/: handler_flow.md
examples/handlers/: cost_detection_handler.py
examples/services/: aws_client.py  cost_anomaly_detector.py  cost_explorer_client.py  llm_client.py
infra/bdp_agent/: docker-compose.yml
infra/bdp_compact_agent/: docker-compose.yml
infra/emr_agent/: dynamodb.tf  lambda.tf
issues/: tasks.md
reports/: scenario_report.html
schemas/: production_rds_init.sql
scripts/: run_mwaa_monitor.py  run_with_kakao_alert.py  send_daily_report.py  test_kakao_chart.py
src/agents/bdp_compact/: .gitignore  Makefile  handler.py  pyproject.toml  server.py
src/agents/bdp_compact/bdp_compact/: __init__.py  handler.py  server.py
src/agents/bdp_compact/bdp_compact/services/: __init__.py  anomaly_detector.py  event_publisher.py  multi_account_provider.py  summary_generator.py
src/agents/bdp_compact/scripts/: build.sh  build_lambda_layer.sh  build_wheel.sh
src/agents/bdp_compact/services/: __init__.py  anomaly_detector.py  chart_generator.py  cost_explorer_provider.py  event_publisher.py  html_report_generator.py  kakao_notifier.py  notification_router.py  pattern_recognizers.py  report_generator.py  summary_generator.py
step_functions/: bdp_cost_workflow.asl.json  bdp_drift_workflow.asl.json  bdp_hdsp_workflow.asl.json  bdp_workflow.asl.json
tests/: conftest.py  test_chat.py  test_hdsp_detection.py
(+112 files in other folders)
